測試路由控制語系

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -4,5 +4,7 @@
   "date": "date",
   "subject": "subject",
   "message": "message",
-  "upload": "upload"
+  "upload": "upload",
+
+  "share": "Share"
 }
