--- a/src/language/zh-TW.json
+++ b/src/language/zh-TW.json
@@ -6,5 +6,9 @@
   "message": "訊息內容",
   "upload": "上傳",
 
-  "share": "分享"
+  "share": "分享",
+  "map": "網站導覽",
+  "home": "回首頁",
+  "contactus": "聯絡我們",
+  "securitypolicy": "網站使用者規範"
 }
